# hass-poolman

./: .codespellignore  .editorconfig  .gitignore  .markdownlint-cli2.yaml  AGENTS.md  CONTRIBUTING.md  README.md  docker-compose.yaml  hacs.json  prek.toml  pyproject.toml  zensical.toml
.agents/skills/consistency-check/: SKILL.md
.agents/skills/consistency-check/references/: code-consistency.md  doc-code-consistency.md  doc-consistency.md
.github/: codecov.yml  dependabot.yml
.github/workflows/: ci.yaml
custom_components/poolman/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  event.py  manifest.json  number.py  scheduler.py  select.py  sensor.py  services.yaml  strings.json  switch.py  time.py
custom_components/poolman/domain/: action.py  activation.py  analysis.py  chemistry.py  filtration.py  model.py  problem.py  problems.py  recommendation.py  rules.py  treatment.py
custom_components/poolman/domain/rules/: __init__.py  base.py  engine.py  registry.py
custom_components/poolman/domain/rules/chemistry/: algae.py  alkalinity.py  chlorine.py  cya.py  hardness.py  ph.py  salt.py  sanitizer.py  tds.py
custom_components/poolman/domain/rules/filtration/: filtration.py
custom_components/poolman/domain/rules/maintenance/: calibration.py
custom_components/poolman/translations/: en.json  fr.json
demo/: configuration.yaml  setup.py
demo/dashboards/: pool-builtin.yaml  pool-custom.yaml
demo/fake_pool_sensor/: __init__.py  config_flow.py  const.py  manifest.json  number.py  sensor.py  strings.json  switch.py
docs/: chemistry-tracking.md  contributing.md  entities.md  faq.md  filtration-control.md  getting-started.md  index.md  pool-modes.md  rules-and-recommendations.md  sample-dashboards.md  water-chemistry.md
scripts/: brand.py
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_coordinator_filtration.py  test_event.py  test_init.py  test_number_entity.py  test_scheduler.py  test_select.py  test_switch.py  test_time_entity.py
tests/domain/: test_action.py  test_activation.py  test_analysis.py  test_chemistry.py  test_filtration.py  test_model.py  test_problem.py  test_problems.py  test_recommendation.py  test_rules.py  test_treatment.py
tests/domain/rules/: conftest.py  test_engine.py
tests/domain/rules/chemistry/: test_algae.py  test_alkalinity.py  test_chlorine.py  test_cya.py  test_hardness.py  test_ph.py  test_salt.py  test_sanitizer.py  test_tds.py
tests/domain/rules/filtration/: test_filtration.py
tests/domain/rules/maintenance/: test_calibration.py
