[project]
name = "hass-poolman"
version = "0.1.0"
description = "Home Assistant custom integration for pool management"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "homeassistant",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "poethepoet",
]
test = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
    "pytest-homeassistant-custom-component",
    "pytest-cov",
]
lint = [
    "prek",
    "ruff>=0.9",
    "sync-pre-commit-lock",
    "ty",
]
docs = [
    "emotional",
    "zensical>=0.0.30",
]

[tool.commitizen]
name = "emotional"
github = "noirbizarre/hass-poolman"
order_by_scope = true
version_provider = "scm"
update_changelog_on_bump = true
changelog_merge_prerelease = true


[tool.codespell]
ignore-words = ".codespellignore"
skip = "reports/*,*.lock,CHANGELOG.md,custom_components/poolman/translations/*.json"


[tool.pytest]
minversion = "9.0"
addopts = ["-ra"]
norecursedirs = [".git", "build", "dist"]
testpaths = [
    "tests/",
]
asyncio_mode = "auto"


[tool.coverage.run]
source_pkgs = ["custom_components.poolman"]
branch = true
omit = [
    "tests/*",
]
relative_files = true


[tool.ruff]
target-version = "py313"
line-length = 100
respect-gitignore = true
show-fixes = true

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "D",     # pydocstyle
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "RET",   # flake8-return
    "RUF",   # ruff-specific
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "T20",   # flake8-print
    "UP",    # pyupgrade
    "W",     # pycodestyle warnings
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
]
extend-safe-fixes = ["C", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["D", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["poolman"]
known-third-party = ["pytest"]
lines-between-types = 1


[tool.poe]
verbosity = -1

[tool.poe.executor]
type = "uv"
no-sync = true
frozen = true

[tool.poe.tasks]
format.help = "Format the code"
format.sequence = [
    { cmd = "ruff check --fix" },
    { cmd = "ruff format" },
]

lint.help = "Run the test suite"
lint.cmd = "prek run -a"

test.help = "Run the test suite"
test.cmd = "pytest"

cover.help = "Run the test suite with coverage"
cover.ref = """
test
    --cov=custom_components/poolman
    --cov-report term-missing
    --cov-report=xml:reports/coverage.xml
    --cov-report=html:reports/coverage/
    --junitxml=reports/junit.xml
"""

brand.help = "Render the brand logo and icon from the SVGs"
brand.cmd = "uv run scripts/brand.py"

"doc:build".help = "Build the documentation"
"doc:build".cmd = "zensical build"

doc.help = "Serve the documentation with live reload"
doc.cmd = "zensical serve"
